# augmented-dance-revolution

./: CMakeLists.txt  ProjectHome.md
trunk/: AugmentedDanceRevolution.sln  AugmentedDanceRevolution.vcxproj  AugmentedDanceRevolution.vcxproj.filters  CMakeLists.txt
trunk/ARToolKit/: ARToolKit.sln  UpgradeLog.XML
trunk/ARToolKit/examples/collide/: collideTest.vcproj
trunk/ARToolKit/examples/collide/Debug/: BuildLog.htm
trunk/ARToolKit/examples/exview/: exview.vcproj
trunk/ARToolKit/examples/exview/Debug/: BuildLog.htm
trunk/ARToolKit/examples/exview/Release/: BuildLog.htm  mt.dep  vc90.idb
trunk/ARToolKit/examples/loadMultiple/: loadMultiple.vcproj
trunk/ARToolKit/examples/loadMultiple/Debug/: BuildLog.htm
trunk/ARToolKit/examples/loadMultiple/Release/: BuildLog.htm  mt.dep
trunk/ARToolKit/examples/modeTest/Debug/: BuildLog.htm
trunk/ARToolKit/examples/modeTest/Release/: mt.dep
trunk/ARToolKit/examples/multi/Debug/: BuildLog.htm
trunk/ARToolKit/examples/multi/Release/: BuildLog.htm
trunk/ARToolKit/examples/optical/: optical.vcproj
trunk/ARToolKit/examples/optical/Debug/: BuildLog.htm
trunk/ARToolKit/examples/optical/Release/: BuildLog.htm  mt.dep  vc90.idb
trunk/ARToolKit/examples/paddle/Release/: BuildLog.htm  mt.dep  vc90.idb
trunk/ARToolKit/examples/paddleDemo/: paddleDemo.vcproj
trunk/ARToolKit/examples/paddleDemo/Release/: vc90.idb
trunk/ARToolKit/examples/paddleInteraction/Debug/: BuildLog.htm
trunk/ARToolKit/examples/paddleInteraction/Release/: vc90.idb
trunk/ARToolKit/examples/relation/: relationTest.vcproj
trunk/ARToolKit/examples/relation/Release/: vc90.idb
trunk/ARToolKit/examples/simple/Release/: BuildLog.htm
trunk/ARToolKit/examples/simple2/Debug/: BuildLog.htm
trunk/ARToolKit/examples/simple2/Release/: vc90.idb
trunk/ARToolKit/examples/simpleLite/Release/: mt.dep
trunk/ARToolKit/examples/twoView/Debug/: BuildLog.htm
trunk/ARToolKit/lib/: libAR.lib  libARgsub.lib  libARgsubUtil.lib  libARvideo.exp
trunk/ARToolKit/lib/SRC/ARMulti/: libARMulti.vcproj
trunk/ARToolKit/util/graphicsTest/: graphicsTest.vcproj
trunk/ARToolKit/util/mk_patt/: mk_patt.vcproj
trunk/ARToolKit/util/videoTest/: videoTest.vcproj
trunk/dependencies/Data/multi/: patt.bl  patt.c  patt.sl
trunk/dependencies/lib/: libARgsubd.lib
trunk/src/: Application.cpp  Application.hpp  main.cpp
(+96 files in other folders)
